# tic_tac_toe

./: .gitignore  CMakeLists.txt  README.md  ai_player.c  ai_player.h  board.c  board.h  button.c  button.h  font_atlas.c.in  font_atlas.h  generate_font_atlas.py  gui_draw.c  gui_draw.h  gui_tictactoe.c  gui_tictactoe.h  human_player.c  human_player.h  input.c  input.h  menu.c  menu.h  phases.c  phases.h  players.c  players.h  render.c  render.h  terminal_draw.c  terminal_draw.h  terminal_tictactoe.c  terminal_tictactoe.h  tic_tac_toe.c  update.c  update.h
tests/: CMakeLists.txt
